addons/rook-ceph/ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-clusterissuer
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    # external-dns.alpha.kubernetes.io/hostname: 'ceph.tiborpilz.dev'
spec:
  tls:
    - hosts:
        - ceph.tiborpilz.dev
      secretName: ceph-tls
  rules:
    - host: ceph.tiborpilz.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 7000
